--- a/source/less/components/files.less
+++ b/source/less/components/files.less
@@ -94,7 +94,7 @@
 			display: none;
 		}
 
-		// Depracated 1.3.9
+		// Deprecated 1.3.9
 		.slimScrollDiv {
 			margin: 0 -@main-gutter 10px;
 			height: auto !important;
@@ -180,7 +180,7 @@
 					color: contrast(@swipe-list-background-open-color);
 
 					&.large {
-						left: -(@main-gutter + 150px);
+						left: -(@main-gutter + 200px);
 					}
 
 					&:hover,
@@ -205,8 +205,8 @@
 					display: block;
 					top: 0;
 					height: 100%;
-					width: (@main-gutter + 200px);
-					right: -(@main-gutter + 200px);
+					width: (@main-gutter + 240px);
+					right: -(@main-gutter + 240px);
 					position: absolute;
 					transition: background 0.7s ease;
 
@@ -259,11 +259,12 @@
 					.box-shadow(0 0 0 transparent);
 					.text-shadow(0 0 0 transparent);
 
-					color: contrast(@swipe-list-background-color);
+					color: contrast(@swipe-list-background-color) !important;
 					transition: left 0.4s ease, background 0.7s ease, color 0.7s ease;
 
 					&.toggleAdditionalData {
-						left: 88.3%;
+						right: 70px;
+						left: auto;
 						font-size: 37px;
 					}
 				}
@@ -282,26 +283,65 @@
 					.btn.disabled, .btn[disabled] {
 						.opacity(0.2);
 					}
+				}
 
+				&.machinecode {
 					.btn {
-						&:first-child {
+						&[data-bind*="PRINT"] {
+							right: (@main-gutter - 15px);
+							left: auto;
+						}
+
+						&[data-bind*="FILES_DOWNLOAD"] {
+							margin-left: 53px !important;
+						}
+
+						&[data-bind*="FILES_DELETE"] {
+							margin-left: 110px !important;
+						}
+
+						&[data-bind*="FILES_UPLOAD"] {
+							margin-left: 160px !important;
+						}
+
+						&[data-bind*="FILES_SELECT"] {
+							margin-left: 0;
+						}
+					}
+				}
+
+				&.model {
+					.btn {
+						&[data-bind*="SLICE"] {
+							right: (@main-gutter - 15px);
+							left: auto;
+						}
+
+						&[data-bind*="FILES_DOWNLOAD"] {
 							right: (@main-gutter + 40px);
 							left: auto;
 						}
-						&:last-child {
-							left: auto;
-							right: (@main-gutter - 15px);
+
+						&[data-bind*="FILES_UPLOAD"] {
+							margin-left: 50px !important;
 						}
-						&:nth-child(2) {
-							margin-left: 55px;
-							margin-top: 2px;
-						}
-						&:nth-child(4) {
-							margin-left: 110px;
-							margin-top: 2px;
+
+						&[data-bind*="FILES_DELETE"] {
+							margin-left: 0;
 						}
 					}
+				}
 
+				&.folder {
+					.btn {
+						&[data-bind*="FILES_DELETE"] {
+							margin-left: 0;
+						}
+
+						&[data-bind*="FILES_UPLOAD"] {
+							margin-left: 50px !important;
+						}
+					}
 				}
 			}
 		}
